--- a/forum/templates/forum/base.html
+++ b/forum/templates/forum/base.html
@@ -19,7 +19,7 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom">
   <a class="navbar-brand" href="/">Rehub Laboratory</a>
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
