--- a/forum/templates/forum/projects.html
+++ b/forum/templates/forum/projects.html
@@ -28,8 +28,8 @@
                 <div class="col-md-6 my-2">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Project {{ i }}</h5>
-                            <p>Details of Project {{ i }}: Exploring advanced concepts in a related field. This project focuses on innovative approaches and groundbreaking research.</p>
+                            <h5 class="card-title">Project "{{ i.title }}"</h5>
+                            <p>Details of Project:  {{ i.description }}</p>
                         </div>
                     </div>
                 </div>
