--- a/forum/templates/forum/base.html
+++ b/forum/templates/forum/base.html
@@ -26,7 +26,7 @@
       <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/about/">About</a>
+      <a class="nav-link" href="/">About</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="/projects/">Projects</a>
@@ -37,12 +37,32 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
+      
+      {% if user.is_superuser%}
+      <li class="nav-item">
+        <a class="nav-link" href="/admin/">Admin</a>
+      </li>
+      {% endif %}
+      {% if request.user.is_authenticated %}
+      <li class="nav-item">
+        <a class="nav-link" href="/profile/">{{user.username}}</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/logout/">Logout</a>
+      </li>
+      {% else %}
       <li class="nav-item">
         <a class="nav-link" href="/register/">Register</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/login/">Login</a>
       </li>
+      {% endif %}
+      {% if request.user.is_authenticated %}
+      <li class="nav-item">
+        <img src="{{current_account_photo.url}}" alt="{{ user.username }}'s photo" style="width:40px; height:40px; border-radius: 50%; border: 2px solid white;">
+      </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
