--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="card-container">
                 {% for post, users in posts_with_users %}
-  
+                {% if forloop.counter <= 3 %}
                 <div class="col-md-4">
                     <div class="card mb-4 shadow" style="border-radius: 15px; overflow: hidden; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
                         <div class="card-body">
@@ -20,7 +20,7 @@
                             <p class="card-text">{{ post.description }}</p>
                         </div>
                         <div class="card-footer d-flex justify-content-between align-items-center" style="background: url('path_to_your_background_image'); background-size: cover;">
-                            <button class="btn btn-sm btn-primary">Join</button>
+                            <a href="{{post.get_absolute_url}}" class="btn btn-sm btn-primary">Join</a>
                             <div class="user-images d-flex">
                                 {% for user in users %}
                                 {% if forloop.counter <= 3 %}
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                 </div>
-                
+                {%endif%}
                 {% endfor %}
             </div>
 
