--- a/forum/templates/forum/projects.html
+++ b/forum/templates/forum/projects.html
@@ -38,7 +38,7 @@
             </div>
             <!-- Button to add more projects -->
             <div class="text-right my-2">
-                <button class="btn btn-outline-success btn-sm">Initiate new project</button>
+                <a href="/addproject/"class="btn btn-outline-success btn-sm">Initiate new project</a>
             </div>
         </div>
     </div>
