--- a/forum/templates/forum/project.html
+++ b/forum/templates/forum/project.html
@@ -10,7 +10,7 @@
             <!-- Project Details -->
             <div class="project-details bg-light p-3">
                 <h2>{{ project_data.title }}</h2>
-                <img src="{{ project.image.url }}" class="img-fluid" alt="Project Image" style="max-width:100%;">
+                <img src="" class="img-fluid" alt="Project Image" style="max-width:100%;">
                 <p class="mt-3">{{ project_data.description }}</p>
 
                 <!-- Additional Project Information -->
