--- a/forum/templates/forum/projects.html
+++ b/forum/templates/forum/projects.html
@@ -1,4 +1,5 @@
 {% extends 'forum/base.html' %}
+{% load custom_filters %}
 
 {% block title %}Projects - Rehub Laboratory{% endblock %}
 
@@ -24,17 +25,25 @@
         <div class="col-md-9">
             <div class="row projects-section">
                 <!-- Dynamically generated project cards -->
-                {% for i in projects %}
+                
+                {% for post, users in posts_with_users %}
                 <div class="col-md-6 my-2">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Project "{{ i.title }}"</h5>
-                            <p>Details of Project:  {{ i.description }}</p>
-                            <a href="{{i.get_absolute_url}}" class="btn btn-primary">Go to Link</a>
+                            <h5 class="card-title">Project "{{ post.title }}"</h5>
+                            <p>Details of Project:  {{ post.description }}</p>
+                            <div class="d-flex align-items-center">
+                                <div class="user-count mr-2">+{{ unique_users|get:post.title }}</div>
+                                {% for user in users %}
+                                    <img src="{{ user.photo.url }}" alt="{{ user.username }}'s photo" class="user-image">
+                                {% endfor %}
+                            </div>
+                            <a href="{{ post.get_absolute_url }}" class="btn btn-primary float-right">Go to Link</a>
                         </div>
                     </div>
                 </div>
-                {% endfor %}
+            {% endfor %}
+            
             </div>
             <!-- Button to add more projects -->
             <div class="text-right my-2">
