--- a/forum/templates/forum/base.html
+++ b/forum/templates/forum/base.html
@@ -28,8 +28,11 @@
       <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/">About</a>
+      <a class="nav-link" href="/users/">Users</a>
     </li>
+    <!-- <li class="nav-item">
+      <a class="nav-link" href="/users">Users</a>
+    </li> -->
     <li class="nav-item">
         <a class="nav-link" href="/projects/">Projects</a>
     </li>
