--- a/forum/templates/forum/profile.html
+++ b/forum/templates/forum/profile.html
@@ -21,8 +21,10 @@
                     <!-- Right Side: Detailed Info -->
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">{{username}}</h5>
+                            <h5 class="card-title">{{current_account.username}}</h5>
                             <p class="card-text">Biography or a brief introduction of the user goes here...</p>
+                            <p class="card-text">Last login: {{current_account.last_login}}</p>
+                            <p class="card-text">Email: {{current_account.email}}</p>
                             <!-- Additional user-specific details here -->
                         </div>
                     </div>
