--- a/forum/templates/forum/myprofile.html
+++ b/forum/templates/forum/myprofile.html
@@ -42,7 +42,7 @@
                     <!-- Left Side: Photo and Basic Info -->
                     <div class="col-md-4">
                         <div class="profile-photo-container">
-                            <img src="{{current_account.photo.url}}" class="profile-photo" alt="John Doe">
+                            <img src="{{current_photo.url}}" class="profile-photo" alt="John Doe">
                         </div>
                         <div class="card-body">
                             <p class="card-text"><strong>Specialization : </strong>{{current_account.specialization}}</p>
