--- a/forum/templates/forum/profile.html
+++ b/forum/templates/forum/profile.html
@@ -12,7 +12,7 @@
                 <div class="row no-gutters">
                     <!-- Left Side: Photo and Basic Info -->
                     <div class="col-md-4">
-                        <img src="{{current_photo.url}}" class="card-img" alt="John Doe">
+                        <img src="{{current_photo_profile.url}}" class="card-img" alt="John Doe">
                         <div class="card-body">
                             <p class="card-text"><strong>Specialization : </strong>{{current_account.specialization}}</p>
                             <p class="card-text"><strong>Telegram : </strong>{{current_account.telegram}}</p>
