--- a/forum/templates/forum/projects.html
+++ b/forum/templates/forum/projects.html
@@ -11,7 +11,7 @@
             <!-- Profile Section with boundary -->
             <div class="profile-boundary bg-pink text-center p-3">
                 <div class="profile-pic-container">
-                    <img src="{{current_account_photo.url}}" class="img-fluid" alt="Profile Picture">
+                    <img src="{{current_photo.url}}" class="img-fluid" alt="Profile Picture">
                 </div>
                 <div class="profile-text">
                     <p>{{request.user.username}}</p>
