--- a/forum/templates/forum/base.html
+++ b/forum/templates/forum/base.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link type="text/css" href="{% static 'forum/css/style.css' %}" rel="stylesheet"/>
     <link type="text/css"  href="{% static 'forum/css/projects.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 
     {% load bootstrap5 %}
     {% bootstrap_css %}
