--- a/forum/templates/forum/register.html
+++ b/forum/templates/forum/register.html
@@ -7,7 +7,7 @@
             <div class="card">
                 <div class="card-body">
                     <!-- Registration Form -->
-                    <form method='POST' enctype='multipart/form-data'>
+                    <form  action="{% url 'register' %}" method='POST' enctype='multipart/form-data'>
                         {% csrf_token %}
                         {{ form.as_p }}
                         <button type="submit" class="btn btn-primary">Register</button>
