edit adding project form

--- a/forum/static/forum/css/style.css
+++ b/forum/static/forum/css/style.css
@@ -99,3 +99,13 @@ main {
 /* .card-body {
     flex: 1; 
 } */
+
+/* move to addproject.css */
+select {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
